fixed backdrop blur on safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,11 @@ html {
   --foreground-rgb: 0, 0, 0;
 }
 
+.blurred-menu {
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #121113;
